trino/templates/netpols.yaml
# TODO: Make sure netpols are in place for Hive as well
#       (It's in a different namespace.)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-same-namespace
  namespace: trino-system
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
  egress:
  - to:
    - podSelector: {}
  ingress:
  - from:
    - podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: coordinator-ingress-allow
  namespace: trino-system
spec:
  podSelector:
    matchLabels:
      component: coordinator
  policyTypes:
    - Ingress
  ingress:
    - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-hive-allow
  namespace: trino-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: hive-system
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-datasources-allow
  namespace: trino-system
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    # TODO: Replace this with CIDRs of StatCan networks.
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: postgresql-datasource
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: minio-system
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dns-allow
  namespace: trino-system
spec:
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
      to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
  podSelector: {}
  policyTypes:
    - Egress

---
# NOTE: This policy is not necessary in real cluster if:
#   * The namespace has any of the following labels:
#     * namespace.statcan.gc.ca/purpose: system
#     * namespace.statcan.gc.ca/purpose: daaas
#   * The pod has the following label:
#     * network.statcan.gc.ca/allow-kube-apiserver: true
#
# In these cases, the necessary network policy is generated by the
# namespace-controller.
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: kube-apiserver-allow
#   namespace: trino-system
# spec:
#   podSelector:
#     matchLabels:
#       network.statcan.gc.ca/allow-kube-apiserver: true
#   policyTypes:
#     - Egress
#   egress:
#     - to:
#         - ipBlock:
#             cidr: 40.82.178.96/32
#       ports:
#         - port: 443
#           protocol: TCP
